Fix error showing ellipse when overflowing admin name

--- a/frontend/src/components/Admin/Topbar/Topbar.module.scss
+++ b/frontend/src/components/Admin/Topbar/Topbar.module.scss
@@ -19,7 +19,8 @@
         position: relative; 
         .info-admin-box { 
             display: flex; 
-            align-items: center; 
+            align-items: center;  
+
             img {
                 width: 40px;
                 height: 40px;
@@ -28,7 +29,11 @@
                 border-radius: 50%;
             }
             span {
-                font-weight: 600;
+                font-weight: 600; 
+                display: -webkit-box; 
+                overflow: hidden;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 1;
             }
         }
 
